--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,14 @@ body {
     margin-bottom: 10px;
 }
 
+aside, section, footer {
+    margin-top: 10px;
+    background: var(--secondary-dark);
+    border: 1px solid var(--medium-dark);
+    border-radius: 20px;
+    padding: 15px;
+    box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
+}
 /* HEADER */
 #main-header {
     position: fixed;
@@ -14,10 +22,11 @@ body {
     left: 0;
     width: 100%;
     border: 1px solid var(--medium-dark);
-    border-radius: 15px;
+    border-radius: 15px 15px 0 0;
     background:rgba(0, 0, 0, 0.155);
     backdrop-filter: blur(10px);
     z-index: 1;
+    /* position: absolute; */
 }
 nav ul {
     display: flex;
@@ -36,19 +45,15 @@ nav ul li:hover {
 
 /* PROFILE */
 .profile {
-    background: var(--secondary-dark);
-    border: 1px solid var(--medium-dark);
-    border-radius: 20px;
-    padding: 15px;
-    box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
     font-size: var(--fs-4);
     width: auto;
-    max-height: 180px;
+    max-height: 150px;
+    transition: var(--transition-2);
 }
 .profile-info {
     display: flex;
     position: relative;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 15px;
 }
@@ -71,6 +76,9 @@ h1 {
     font-size: var(--fs-3);
 }
 .profile-desc h2 {
+    background-color: var(--medium-dark);
+    border-radius: 10px;
+    padding: 5px;
     font-size: var(--fs-4);
     font-weight: var(--fw-1);
 }
@@ -117,14 +125,7 @@ h1 {
 
 /* SECTION ABOUT ME */
 section {
-    margin-top: 10px;
-    background: var(--secondary-dark);
-    border: 1px solid var(--medium-dark);
-    border-radius: 20px;
-    padding: 15px;
-    box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
-    font-size: var(--fs-4);
-    /* width: auto; */
+
 }
 section h2 {
     position: relative;
@@ -140,6 +141,17 @@ section h2::after {
     left: 0;
     background-color: var(--light-yellow);
 }
+.article-presentation {text-align: justify;}
+.article-skills {
+    margin-top: 30px;
+}
+.title-skills {position: relative;}
+.title-skills img {
+    width: 100px;
+    position: absolute;
+    right: 0;
+    top: -52px;
+}
 .article-skills h3 {
     margin-bottom: 25px;
 }
@@ -147,7 +159,6 @@ section h2::after {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    /* align-items: center; */
     gap: 25px;
 }
 .article-skills .content-skill {
@@ -231,4 +242,153 @@ section h2::after {
     background: var(--light-yellow);
     border-radius: 50%;
     box-shadow: 0 0 3px 3px var(--light-dark);
+}
+
+/* SECTION PROJECTS */
+.container-projects {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+.container-projects figure {
+    overflow: hidden;
+    width: 100%;
+    margin: 0;
+}
+.container-projects figcaption {
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.container-projects img {
+    width: 100%;
+    border-radius: 15px;
+}
+.container-projects .project-link ion-icon {
+    font-size: 17px;
+}
+
+/* SECTION CONTACT */
+.contact form {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    background: none;
+}
+.form-input {
+    outline: none;
+    color: var(--light-dark);
+}
+.form-input:focus {
+    border-color: var(--light-yellow);
+}
+
+.form-input:focus:invalid {
+    border-color: var(--light-yellow);
+}
+.contact form input {
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid var(--medium-dark);
+}
+.contact form textarea {
+    background-color: transparent;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid var(--medium-dark);
+}
+
+footer {
+    margin: 10px 0 40px 0;
+    font-size: var(--fs-4);
+    width: auto;
+    max-height: 180px;
+    text-align: center;
+}
+footer img {
+    width: 150px;
+}
+
+/* MEDIA QUERIES */
+@media (min-width: 425px) {
+    .profile {max-height: 130px;}
+    .profile-desc button {display: none;}
+}
+
+@media (min-width: 580px) {
+    body {font-size: var(--fs-3);}
+    footer {margin-bottom: 50px;}
+    main {
+        width: 520px;
+        margin-inline: auto;
+    }
+    h1 {
+        font-size: var(--fs-1);
+    }
+}
+
+@media (min-width: 768px) {
+    main {
+        width: 700px;
+        margin-inline: auto;
+    }
+    aside, section {padding: 25px}
+    .article-skills ul {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 25px;
+    }
+    .container-projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (min-width: 1024px) {
+    main {
+        width: 950px;
+        margin-inline: auto;
+    }
+    footer {margin-bottom: 20px;}
+    .container-projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
+   #main-header {
+        position: absolute;
+        left: inherit;
+        bottom: inherit;
+        background: none;
+        backdrop-filter: none;
+        border: none;
+        width: auto;
+   }
+}
+
+@media (min-width: 1250px) {
+    main {
+        width: 1000px;
+        margin-inline: auto;
+        display: flex;
+        gap: 10px;
+    }
+    aside.profile {
+        position: sticky;
+        top: 40px;
+        height: 100%;
+        max-height: max-content;
+    }
+    div.main {
+        margin-top: 20px;
+    }
+    .btn-arrow {display: none;}
+    .profile-info {
+        flex-direction: column;
+    }
+    .profile-detail {
+        opacity: 1;
+        visibility: visible;
+    }
 }
