--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,16 @@ aside, section, footer {
     padding: 15px;
     box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
 }
+section {display: none;}
+section.active {
+  display: block;
+  animation: fade 0.5s ease backwards;
+}
+@keyframes fade {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 /* HEADER */
 #main-header {
     position: fixed;
@@ -36,10 +46,10 @@ nav ul {
 nav ul li {
     cursor: pointer;
 }
-nav ul li:active {
+nav ul li.active {
     color: var(--light-yellow);
 }
-nav ul li:hover {
+nav ul li:hover, nav ul li:focus {
     color: var(--light-dark);
 }
 
@@ -63,7 +73,7 @@ nav ul li:hover {
     background-color: var(--light-yellow);
     border: 1px solid var(--medium-dark);
     box-shadow: -4px 8px 24px rgba(129, 128, 128, 0.25);
-    border-radius: 50%;
+    border-radius: 15px;
 }
 .avatar-content img {
     width: 80px;
@@ -78,7 +88,7 @@ h1 {
 .profile-desc h2 {
     background-color: var(--medium-dark);
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px;
     font-size: var(--fs-4);
     font-weight: var(--fw-1);
 }
@@ -90,7 +100,7 @@ h1 {
     visibility: hidden;
     transition: var(--transition-2);
 }
-.profile.active { max-height: 405px; }
+.profile.active { max-height: 600px; }
 .profile.active .profile-detail {
     opacity: 1;
     visibility: visible;
@@ -104,16 +114,27 @@ h1 {
 .info-box {
     display: flex;
     align-items: center;
-
 }
-
 .info-box figure {
-    margin: 5px;
-    padding: 5px;
-    background-color: var(--main-dark);
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--secondary-dark);
     border: 1px solid var(--medium-dark);
-    box-shadow: -1px 2px 24px rgba(137, 135, 135, 0.25);
-    border-radius: 50%;
+    box-shadow: -1px 2px 15px -5px rgba(137, 135, 135, 0.25);
+    border-radius: 15px;
+}
+.info-box h5 {
+    color: var(--light-yellow);
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+.info-box p {margin-top: 0;}
+.info-box a {
+    display: block;
+    margin-bottom: 15px;
+    font-size: var(--fs-5);
+    color: var(--light-gray);
+    font-weight: var(--fw-300);
 }
 .social-media-list {
     margin-bottom: 0;
@@ -124,9 +145,6 @@ h1 {
 }
 
 /* SECTION ABOUT ME */
-section {
-
-}
 section h2 {
     position: relative;
     padding-bottom: 10px;
@@ -144,13 +162,6 @@ section h2::after {
 .article-presentation {text-align: justify;}
 .article-skills {
     margin-top: 30px;
-}
-.title-skills {position: relative;}
-.title-skills img {
-    width: 100px;
-    position: absolute;
-    right: 0;
-    top: -52px;
 }
 .article-skills h3 {
     margin-bottom: 25px;
@@ -214,6 +225,7 @@ section h2::after {
 }
 .section-exp .timeline-item h4 {
     margin-bottom: 10px;
+    color: var(--white2);
 }
 .section-exp .timeline-item span {
     color: var(--light-yellow);
@@ -285,7 +297,10 @@ section h2::after {
 .form-input:focus {
     border-color: var(--light-yellow);
 }
-
+.contact .inputs {
+    display: grid;
+    gap: 15px;
+}
 .form-input:focus:invalid {
     border-color: var(--light-yellow);
 }
@@ -294,12 +309,24 @@ section h2::after {
     padding: 10px;
     border-radius: 10px;
     border: 1px solid var(--medium-dark);
+    box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
 }
 .contact form textarea {
     background-color: transparent;
     padding: 10px;
     border-radius: 10px;
     border: 1px solid var(--medium-dark);
+    box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
+}
+.contact .map {
+    margin-bottom: 20px;
+    border: 1px solid var(--medium-dark);
+    border-radius: 15px;
+    box-shadow: -4px 8px 24px rgba(0, 0, 0, 0.25);
+}
+.contact .map iframe {
+    border-radius: 15px;
+    filter: grayscale(1) invert(1);
 }
 
 footer {
@@ -332,6 +359,11 @@ footer img {
 }
 
 @media (min-width: 768px) {
+    p, a {
+        color: var(--light-gray);
+        font-weight: var(--fw-300);
+        font-size: var(--fs-5);
+    }
     main {
         width: 700px;
         margin-inline: auto;
@@ -349,31 +381,49 @@ footer img {
 
 @media (min-width: 1024px) {
     main {
-        width: 950px;
+        width: 900px;
+        position: relative;
         margin-inline: auto;
     }
     footer {margin-bottom: 20px;}
     .container-projects {
         grid-template-columns: repeat(3, 1fr);
     }
-   #main-header {
+    #main-header {
         position: absolute;
-        left: inherit;
+        right: 0;
+        width: auto;
+        left: auto;
         bottom: inherit;
-        background: none;
+        background: var(--medium-dark);
         backdrop-filter: none;
         border: none;
-        width: auto;
-   }
+        padding-left: 25px;
+        padding-right: 25px;
+        border-radius: 0 15px 0 15px;
+    }
+    #main-header nav ul {
+        gap: 20px;
+        justify-content: flex-end;
+    }
+    .info-box ion-icon {font-size: 20px;}
+    .contact .inputs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .contact form button {
+        width: 30%;
+        margin-left: auto;
+    }
 }
 
 @media (min-width: 1250px) {
     main {
-        width: 1000px;
+        width: 1100px;
         margin-inline: auto;
         display: flex;
         gap: 10px;
     }
+    #main-header {margin-top: 10px;}
     aside.profile {
         position: sticky;
         top: 40px;
@@ -381,6 +431,7 @@ footer img {
         max-height: max-content;
     }
     div.main {
+        width: 100%;
         margin-top: 20px;
     }
     .btn-arrow {display: none;}
